[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-quercle"
version = "0.1.4"
description = "LangChain tools for Quercle web search and URL fetching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Quercle", email = "support@quercle.dev" }
]
keywords = ["langchain", "quercle", "web-search", "ai", "llm", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "quercle>=0.1.3",
    "langchain-core>=0.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/quercledev/quercle-langchain"
Documentation = "https://quercle.dev/docs"
Repository = "https://github.com/quercledev/quercle-langchain"

[tool.hatch.build.targets.wheel]
packages = ["quercle_langchain"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
